// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Button ui button disabled is disabled 1`] = `
<span
  className="button d-inline-block primary"
>
  <Button
    color="primary"
    disabled={true}
    onClick={[Function]}
    size="md"
    tag="button"
    type="button"
  >
    <div
      className="d-flex justify-content-center align-items-center"
    >
      Save
    </div>
  </Button>
</span>
`;

exports[`Component: Button ui button disabled is enabled 1`] = `
<span
  className="button d-inline-block primary"
>
  <Button
    color="primary"
    disabled={false}
    onClick={[Function]}
    size="md"
    tag="button"
    type="button"
  >
    <div
      className="d-flex justify-content-center align-items-center"
    >
      Save
    </div>
  </Button>
</span>
`;

exports[`Component: Button ui button full-width 1`] = `
<span
  className="button d-block primary"
>
  <Button
    block={true}
    color="primary"
    onClick={[Function]}
    size="md"
    tag="button"
    type="button"
  >
    <div
      className="d-flex justify-content-center align-items-center"
    >
      Save
    </div>
  </Button>
</span>
`;

exports[`Component: Button ui button normal inProgress is false 1`] = `
<span
  className="button d-inline-block primary"
>
  <Button
    color="primary"
    onClick={[Function]}
    size="md"
    tag="button"
    type="button"
  >
    <div
      className="d-flex justify-content-center align-items-center"
    >
      Save
    </div>
  </Button>
</span>
`;

exports[`Component: Button ui button normal inProgress is true 1`] = `
<span
  className="button d-inline-block primary"
>
  <Button
    color="primary"
    disabled={true}
    onClick={[Function]}
    size="md"
    tag="button"
    type="button"
  >
    <div
      className="d-flex justify-content-center align-items-center"
    >
      Save
      <Spinner
        className="ms-2"
        color="white"
        size={16}
      />
    </div>
  </Button>
</span>
`;

exports[`Component: Button ui button outline inProgress is false 1`] = `
<span
  className="button d-inline-block primary"
>
  <Button
    color="primary"
    onClick={[Function]}
    outline={true}
    size="md"
    tag="button"
    type="button"
  >
    <div
      className="d-flex justify-content-center align-items-center"
    >
      Save
    </div>
  </Button>
</span>
`;

exports[`Component: Button ui button outline inProgress is true 1`] = `
<span
  className="button d-inline-block primary"
>
  <Button
    color="primary"
    disabled={true}
    onClick={[Function]}
    outline={true}
    size="md"
    tag="button"
    type="button"
  >
    <div
      className="d-flex justify-content-center align-items-center"
    >
      <Spinner
        className="me-2"
        color=""
        size={16}
      />
      Save
    </div>
  </Button>
</span>
`;

exports[`Component: Button ui button size can override size 1`] = `
<span
  className="button d-inline-block primary"
>
  <Button
    color="primary"
    onClick={[Function]}
    size="sm"
    tag="button"
    type="button"
  >
    <div
      className="d-flex justify-content-center align-items-center"
    >
      Save
    </div>
  </Button>
</span>
`;

exports[`Component: Button ui button size use md by default 1`] = `
<span
  className="button d-inline-block primary"
>
  <Button
    color="primary"
    onClick={[Function]}
    size="md"
    tag="button"
    type="button"
  >
    <div
      className="d-flex justify-content-center align-items-center"
    >
      Save
    </div>
  </Button>
</span>
`;

exports[`Component: Button ui button with icon normal inProgress is false 1`] = `
<span
  className="button d-inline-block primary"
>
  <Button
    color="primary"
    onClick={[Function]}
    size="md"
    tag="button"
    type="button"
  >
    <div
      className="d-flex justify-content-center align-items-center"
    >
      <Icon
        className="button-icon me-2"
        icon="save"
      />
      Save
    </div>
  </Button>
</span>
`;

exports[`Component: Button ui button with icon normal inProgress is true 1`] = `
<span
  className="button d-inline-block primary"
>
  <Button
    color="primary"
    disabled={true}
    onClick={[Function]}
    size="md"
    tag="button"
    type="button"
  >
    <div
      className="d-flex justify-content-center align-items-center"
    >
      <Spinner
        className="me-2"
        color="white"
        size={16}
      />
      Save
    </div>
  </Button>
</span>
`;

exports[`Component: Button ui button with icon normal with icon on the right 1`] = `
<span
  className="button d-inline-block primary"
>
  <Button
    color="primary"
    onClick={[Function]}
    size="md"
    tag="button"
    type="button"
  >
    <div
      className="d-flex justify-content-center align-items-center"
    >
      Save
      <Icon
        className="button-icon ms-2"
        icon="save"
      />
    </div>
  </Button>
</span>
`;

exports[`Component: Button ui button with icon outline inProgress is false 1`] = `
<span
  className="button d-inline-block primary"
>
  <Button
    color="primary"
    onClick={[Function]}
    outline={true}
    size="md"
    tag="button"
    type="button"
  >
    <div
      className="d-flex justify-content-center align-items-center"
    >
      <Icon
        className="button-icon me-2"
        icon="save"
      />
      Save
    </div>
  </Button>
</span>
`;

exports[`Component: Button ui button with icon outline inProgress is true 1`] = `
<span
  className="button d-inline-block primary"
>
  <Button
    color="primary"
    disabled={true}
    onClick={[Function]}
    outline={true}
    size="md"
    tag="button"
    type="button"
  >
    <div
      className="d-flex justify-content-center align-items-center"
    >
      <Spinner
        className="me-2"
        color=""
        size={16}
      />
      Save
    </div>
  </Button>
</span>
`;

exports[`Component: Button ui icon only disabled is disabled 1`] = `
<span
  className="button primary d-inline-block"
>
  <Icon
    color="primary"
    disabled={true}
    icon="save"
    onClick={[Function]}
    size={24}
  />
</span>
`;

exports[`Component: Button ui icon only disabled is enabled 1`] = `
<span
  className="button primary d-inline-block"
>
  <Icon
    color="primary"
    disabled={false}
    icon="save"
    onClick={[Function]}
    size={24}
  />
</span>
`;

exports[`Component: Button ui icon only full-width full width and icon left 1`] = `
<span
  className="button primary d-flex justify-content-start"
>
  <Icon
    color="primary"
    icon="save"
    onClick={[Function]}
    size={24}
  />
</span>
`;

exports[`Component: Button ui icon only full-width full width and icon right 1`] = `
<span
  className="button primary d-flex justify-content-end"
>
  <Icon
    color="primary"
    icon="save"
    onClick={[Function]}
    size={24}
  />
</span>
`;

exports[`Component: Button ui icon only inProgress inProgress is false 1`] = `
<span
  className="button primary d-inline-block"
>
  <Icon
    color="primary"
    icon="save"
    onClick={[Function]}
    size={24}
  />
</span>
`;

exports[`Component: Button ui icon only inProgress inProgress is true 1`] = `
<span
  className="button primary d-inline-block"
>
  <Spinner
    color=""
    size={24}
  />
</span>
`;
